messy but it fixes the MOTD

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -5,8 +5,7 @@ platform = atmelavr                     ; Platform to build for
 board = megaatmega2560                  ; Supported boards
 framework = arduino                     ; What framework we're using
 
-extra_scripts = build_flags.py          ; Extra scripts
-build_flags = -I include/v2_Board       ; Build flags before we push
+build_flags = !python build_flags.py          ; Custom Build Flags
 
 check_tool = clangtidy                  ; De-linter
 check_flags =
