--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -5,7 +5,10 @@ platform = atmelavr                     ; Platform to build for
 board = megaatmega2560                  ; Supported boards
 framework = arduino                     ; What framework we're using
 
-build_flags = !python build_flags.py          ; Custom Build Flags
+build_flags = !python build_flags.py    ; Custom Build Flags
+
+debug_tool = avr-stub                   ; Debugging tool
+debug_port = /dev/ttyACM0               ; Serial port
 
 check_tool = clangtidy                  ; De-linter
 check_flags =
@@ -19,6 +22,8 @@ lib_deps =                              ; External libraries
     EnableInterrupt@1.1.0               ; Enable inturrupt
     TimerOne@1.1.0                      ; Timer 1 lib
     SPI@1.0                             ; STD SPI lib
+    ArduinoLog@1.1.1                    ; For logging
+    jdolinay/avr-debugger @ ~1.1        ; GDB stub implementation
 
 # Monitor Settings
 monitor_speed = 115200
