Begin the migration away from timezone

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -18,12 +18,12 @@ lib_deps =                              ; External libraries
     TinyGPS                             ; Not easy to find a good lib replacement for tinygps 
     adafruit/RTClib@2.0.3               ; Adafruit's RTClib should be fine
     Time@1.6.1                          ; Timelib
-    jchristensen/Timezone@1.2.4         ; Timezone utils
     EnableInterrupt@1.1.0               ; Enable inturrupt
     TimerOne@1.1.0                      ; Timer 1 lib
     SPI@1.0                             ; STD SPI lib
     ArduinoLog@1.1.1                    ; For logging
     jdolinay/avr-debugger @ ~1.1        ; GDB stub implementation
+    FreeRTOS                            ; https://github.com/feilipu/Arduino_FreeRTOS_Library
 
 # Monitor Settings
 monitor_speed = 115200
