--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -22,7 +22,7 @@ lib_deps =                              ; External libraries
     EnableInterrupt@1.1.0               ; Enable inturrupt
     TimerOne@1.1.0                      ; Timer 1 lib
     SPI@1.0                             ; STD SPI lib
-    ArduinoLog@1.1.1                    ; For logging
+    ; ArduinoLog@1.1.1                    ; For logging
     jdolinay/avr-debugger @ ~1.1        ; GDB stub implementation
 
 # Monitor Settings
