change libs and simplify sync

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,7 +15,7 @@ check_flags =
   clangtidy: --fix --checks=abseil,boost,bugprone,cert,cppcoreguidelines,clang-analyzer,google,hicpp,modernize,performance,portability,readability,cppcoreguidelines-avoid-magic-numbers,fuchsia-statically-constructed-objects,cert-err58-cpp,cppcoreguidelines-avoid-non-const-global-variables,cppcoreguidelines-macro-usage
 
 lib_deps =                              ; External libraries
-    TinyGPS                             ; Not easy to find a good lib replacement for tinygps 
+    TinyGPSPlus                         ; Not easy to find a good lib replacement for tinygps 
     adafruit/RTClib@2.0.3               ; Adafruit's RTClib should be fine
     Time@1.6.1                          ; Timelib
     jchristensen/Timezone@1.2.4         ; Timezone utils
